--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "aos": "^2.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
-    "motion": "^12.7.5",
+    "pigeon-maps": "^0.22.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.0",
+    "react-router": "^7.5.2",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.17",
     "sweetalert2": "^11.19.1",
